--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "6.0.1",
+  "version": "6.0.2",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -57,17 +57,17 @@
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "7.7.0",
-    "@vitejs/plugin-react": "^3.0.0",
-    "better-sqlite3": "8.0.1",
+    "@vitejs/plugin-react": "3.1.0",
+    "better-sqlite3": "8.1.0",
     "body-parser": "1.20.1",
     "cookie-session": "2.0.0",
     "handlebars": "4.7.7",
-    "highcharts": "10.3.2",
+    "highcharts": "10.3.3",
     "highcharts-react-official": "3.1.0",
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
     "nanoid": "3.3.3",
-    "node-fetch": "2.6.7",
+    "node-fetch": "2.6.9",
     "node-mailjet": "3.3.13",
     "query-string": "7.1.3",
     "react": "18.2.0",
@@ -76,31 +76,31 @@
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
     "react-switch": "7.0.0",
-    "redux": "4.2.0",
+    "redux": "4.2.1",
     "redux-thunk": "2.4.2",
     "restana": "4.9.7",
     "semantic-ui-react": "2.1.4",
     "serve-static": "1.15.0",
     "slack": "11.0.2",
     "string-similarity": "^4.0.4",
-    "vite": "^4.0.2",
+    "vite": "4.1.1",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.5",
+    "@babel/core": "7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "chai": "4.3.7",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-react": "7.31.11",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-react": "7.32.2",
     "history": "5.3.0",
     "husky": "4.3.8",
     "less": "4.1.3",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.1.2",
     "mocha": "10.2.0",
-    "prettier": "2.8.1",
+    "prettier": "2.8.4",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6"
   }
