--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ui": "rm -rf ./ui/public/* && vite",
     "prod": "yarn && vite build --emptyOutDir",
     "format": "prettier --write lib/**/*.js ui/src/**/*.js test/**/*.js *.js --single-quote --print-width 120",
-    "test": "mocha --timeout 3000000 test/**/*.test.js",
+    "test": "mocha --loader=esmock --timeout 3000000 test/**/*.test.js",
     "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js"
   },
   "husky": {
@@ -89,6 +89,7 @@
     "x-ray": "2.3.4"
   },
   "devDependencies": {
+    "esmock": "2.1.0",
     "@babel/core": "7.21.0",
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
@@ -103,7 +104,6 @@
     "lint-staged": "13.1.2",
     "mocha": "10.2.0",
     "prettier": "2.8.4",
-    "proxyquire": "2.1.3",
     "redux-logger": "3.0.6"
   }
 }
