--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "6.0.2",
+  "version": "7.0.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -8,7 +8,7 @@
     "ui": "rm -rf ./ui/public/* && vite",
     "prod": "yarn && vite build --emptyOutDir",
     "format": "prettier --write lib/**/*.js ui/src/**/*.js test/**/*.js *.js --single-quote --print-width 120",
-    "test": "mocha --timeout 3000000 test/**/*.test.js",
+    "test": "mocha --loader=esmock --timeout 3000000 test/**/*.test.js",
     "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js"
   },
   "husky": {
@@ -16,6 +16,7 @@
       "pre-commit": "lint-staged"
     }
   },
+  "type": "module",
   "lint-staged": {
     "*.js": [
       "eslint ./index.js ./lib/**/*.js ./test/**/*.js",
@@ -58,18 +59,19 @@
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "7.7.0",
     "@vitejs/plugin-react": "3.1.0",
-    "better-sqlite3": "8.1.0",
-    "body-parser": "1.20.1",
+    "better-sqlite3": "8.2.0",
+    "body-parser": "1.20.2",
     "cookie-session": "2.0.0",
     "handlebars": "4.7.7",
     "highcharts": "10.3.3",
-    "highcharts-react-official": "3.1.0",
-    "lowdb": "1.0.0",
+    "highcharts-react-official": "3.2.0",
+    "lodash": "^4.17.21",
+    "lowdb": "5.1.0",
     "markdown": "^0.5.0",
-    "nanoid": "3.3.3",
-    "node-fetch": "2.6.9",
-    "node-mailjet": "3.3.13",
-    "query-string": "7.1.3",
+    "nanoid": "4.0.1",
+    "node-fetch": "3.3.1",
+    "node-mailjet": "6.0.2",
+    "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
@@ -83,25 +85,25 @@
     "serve-static": "1.15.0",
     "slack": "11.0.2",
     "string-similarity": "^4.0.4",
-    "vite": "4.1.1",
+    "vite": "4.1.4",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
+    "esmock": "2.1.0",
+    "@babel/core": "7.21.0",
+    "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "chai": "4.3.7",
-    "eslint": "8.34.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-react": "7.32.2",
     "history": "5.3.0",
     "husky": "4.3.8",
     "less": "4.1.3",
-    "lint-staged": "13.1.2",
+    "lint-staged": "13.2.0",
     "mocha": "10.2.0",
     "prettier": "2.8.4",
-    "proxyquire": "2.1.3",
     "redux-logger": "3.0.6"
   }
 }
