--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "handlebars": "4.7.7",
     "highcharts": "10.3.3",
     "highcharts-react-official": "3.2.0",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "lowdb": "5.1.0",
     "markdown": "^0.5.0",
     "nanoid": "4.0.1",
@@ -102,7 +102,7 @@
     "less": "4.1.3",
     "lint-staged": "13.2.0",
     "mocha": "10.2.0",
-    "prettier": "2.8.4",
+    "prettier": "2.8.5",
     "redux-logger": "3.0.6"
   }
 }
