--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "10.1.1",
+  "version": "10.2.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -55,13 +55,13 @@
     "Firefox ESR"
   ],
   "dependencies": {
-    "@douyinfe/semi-ui": "2.65.0",
+    "@douyinfe/semi-ui": "2.68.3",
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
-    "@sendgrid/mail": "8.1.3",
-    "@vitejs/plugin-react": "4.3.1",
-    "better-sqlite3": "8.6.0",
-    "body-parser": "1.20.2",
+    "@sendgrid/mail": "8.1.4",
+    "@vitejs/plugin-react": "4.3.3",
+    "better-sqlite3": "^11.5.0",
+    "body-parser": "1.20.3",
     "cookie-session": "2.1.0",
     "handlebars": "4.7.8",
     "highcharts": "11.4.8",
@@ -69,10 +69,10 @@
     "lodash": "4.17.21",
     "lowdb": "6.0.1",
     "markdown": "^0.5.0",
-    "nanoid": "5.0.7",
+    "nanoid": "5.0.8",
     "node-fetch": "3.3.2",
     "node-mailjet": "6.0.6",
-    "query-string": "8.2.0",
+    "query-string": "9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "9.1.2",
@@ -81,27 +81,27 @@
     "redux": "5.0.1",
     "redux-thunk": "3.1.0",
     "restana": "4.9.9",
-    "serve-static": "1.15.0",
+    "serve-static": "1.16.2",
     "slack": "11.0.2",
     "string-similarity": "^4.0.4",
-    "vite": "5.4.3",
+    "vite": "5.4.10",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/eslint-parser": "7.25.1",
-    "@babel/preset-env": "7.25.4",
-    "@babel/preset-react": "7.24.7",
-    "chai": "5.1.1",
+    "@babel/core": "7.26.0",
+    "@babel/eslint-parser": "7.25.9",
+    "@babel/preset-env": "7.26.0",
+    "@babel/preset-react": "7.25.9",
+    "chai": "5.1.2",
     "eslint": "8.56.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-react": "7.35.2",
-    "esmock": "2.6.7",
+    "eslint-plugin-react": "7.37.2",
+    "esmock": "2.6.9",
     "history": "5.3.0",
     "husky": "4.3.8",
     "less": "4.2.0",
     "lint-staged": "13.2.2",
-    "mocha": "10.7.3",
+    "mocha": "10.8.2",
     "prettier": "3.3.3",
     "redux-logger": "3.0.6"
   }
