--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash": "4.17.21",
     "lowdb": "6.0.1",
     "markdown": "^0.5.0",
+    "mixpanel": "^0.18.0",
     "nanoid": "5.0.8",
     "node-fetch": "3.3.2",
     "node-mailjet": "6.0.6",
