--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "nanoid": "5.0.9",
     "node-fetch": "3.3.2",
     "node-mailjet": "6.0.6",
+    "puppeteer": "^23.10.4",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "query-string": "9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
