--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@vitejs/plugin-react": "4.3.4",
     "better-sqlite3": "^11.7.0",
     "body-parser": "1.20.3",
+    "cheerio": "^1.0.0",
     "cookie-session": "2.1.0",
     "handlebars": "4.7.8",
     "highcharts": "12.1.0",
