--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,5 @@
 name: Create and publish Docker image
+
 on:
   push:
     branches:
@@ -24,7 +25,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64,linux/arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -42,11 +43,29 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push Docker image with cache & retry
+        run: |
+          set -e
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            docker buildx build \
+              --push \
+              --platform linux/amd64,linux/arm64 \
+              --tag ${{ steps.meta.outputs.tags }} \
+              --label ${{ steps.meta.outputs.labels }} \
+              --cache-from=type=gha \
+              --cache-to=type=gha,mode=max \
+              .
+            status=$?
+            if [ $status -eq 0 ]; then
+              echo "Docker build succeeded on attempt $i"
+              break
+            else
+              echo "Docker build failed (attempt $i). Retrying in 10 seconds..."
+              sleep 10
+            fi
+            if [ $i -eq 3 ]; then
+              echo "Docker build failed after 3 attempts. Exiting with error."
+              exit 1
+            fi
+          done
