--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "fredy",
   "version": "12.0.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
-  "packageManager": "pnpm@9.1.0",
   "scripts": {
     "start": "node prod.js",
-    "dev": "pnpm install && rm -rf ./ui/public/* && vite",
+    "dev": "yarn && rm -rf ./ui/public/* && vite",
     "ui": "rm -rf ./ui/public/* && vite",
-    "prod": "pnpm install && vite build --emptyOutDir",
+    "prod": "yarn && vite build --emptyOutDir",
     "format": "prettier --write lib/**/*.js ui/src/**/*.jsx test/**/*.js *.js --single-quote --print-width 120",
     "test": "mocha --loader=esmock --timeout 3000000 test/**/*.test.js",
     "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js ./ui/src/**/*.jsx"
@@ -41,8 +40,8 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=22.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=7.0.0"
   },
   "browserslist": [
     "> 0.5%",
