--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,14 @@ ui/public/
 db/
 npm-debug.log
 .idea
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
