--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "handlebars": "4.7.8",
     "highcharts": "12.2.0",
     "highcharts-react-official": "3.2.2",
+    "html-to-text": "^9.0.5",
+    "jsonpath": "^1.1.1",
     "lodash": "4.17.21",
     "lowdb": "6.0.1",
     "markdown": "^0.5.0",
@@ -98,7 +100,7 @@
     "eslint": "8.56.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.37.5",
-    "esmock": "2.7.0",
+    "esmock": "^2.7.0",
     "history": "5.3.0",
     "husky": "9.1.7",
     "less": "4.3.0",
