--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Test WaypointCalculator",
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "test/services/calculateWaypoints.test.js",
+                "--timeout",
+                "999999",
+            ],
+            "outFiles": ["${workspaceFolder}/**/*.js"],
+            "console": "integratedTerminal"
+        },
         {
             "type": "node",
             "request": "launch",
