--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@douyinfe/semi-icons": "^2.80.0",
     "@douyinfe/semi-ui": "2.80.0",
+    "@googlemaps/routing": "^2.0.1",
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "8.1.5",
@@ -60,6 +61,7 @@
     "body-parser": "2.2.0",
     "cheerio": "^1.1.0",
     "cookie-session": "2.1.0",
+    "google-auth-library": "^10.1.0",
     "handlebars": "4.7.8",
     "highcharts": "12.2.0",
     "highcharts-react-official": "3.2.2",
