ci: change step name for workflow to check sourcecode

--- a/.github/workflows/check_source.yml
+++ b/.github/workflows/check_source.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - name: install
+      - name: Install dependencies
         run: yarn install
 
       - name: Check formatting
