--- a/.github/workflows/check_source.yml
+++ b/.github/workflows/check_source.yml
@@ -1,14 +1,12 @@
-name: Test
+name: Check the source code
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-  schedule:
-    - cron: '0 12 * * *'
-
 jobs:
-  test:
+  check_source_code:
+    name: Check the source code
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,5 +16,11 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - run: yarn install
-      - run: yarn test
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Check formatting
+        run: yarn format:check
+
+      - name: Lint
+        run: yarn lint
