--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -17,7 +17,7 @@ body:
   - type: textarea
     id: solution
     attributes:
-      label: Proposed Solution
+      label: Proposed Feature
       description: Describe the feature you would like to see.
       placeholder: "I would like Fredy to automatically..."
     validations:
