--- a/conf/config.json
+++ b/conf/config.json
@@ -1,1 +1,1 @@
-{"interval":"60","port":9998,"workingHours":{"from":"","to":""},"demoMode":false,"analyticsEnabled":null}
+{"interval":15,"port":9998,"workingHours":{"from":"7:00","to":"23:00"},"demoMode":false,"analyticsEnabled":true}
