--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "11.6.3",
+  "version": "11.6.4",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "prepare": "husky",
@@ -91,6 +91,7 @@
     "serve-static": "2.2.0",
     "slack": "11.0.2",
     "vite": "7.1.5",
+    "winston": "^3.17.0",
     "x-var": "^2.1.0"
   },
   "devDependencies": {
